<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 常用公用字符串 -->
    <string name="app_name">叮当兔</string>
    <string name="map_common">普通地图</string>
    <string name="map_site">卫星地图</string>
    <string name="map_traffic">实时交通(off)</string>
    <string name="aks_version">版本号</string>
    
    <!-- 按钮上字符串 -->
	<string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <string name="title">标题</string>
    <string name="edit">编辑</string>
    
    <!-- tab -->
    <string name="tab_product">产品</string>
    <string name="tab_suppliers">供应商</string>
    <string name="tab_order">订单</string>
    <string name="tab_more">更多</string>
    <string name="tab_toorder">叮当兔</string>
           <!-- product -->
    <string name="app_search">快速查找供应商</string>
    <string name="add_product">添加产品</string>
    <string name="product_pic">照片附件</string>
    <string name="product_name">名称</string>
    <string name="product_sku">sku编码</string>
    <string name="product_sort">分类</string>
    <string name="product_price">价格</string>
    <string name="product_unit2">单位(件)</string>
    <string name="product_unit">单位</string>
    <string name="product_discount">折扣</string>
    <string name="product_groupby">分组管理</string>
    <string name="product_description">描述</string>
    <string name="product_totle">累计订货量</string>
    <string name="pro_sortname">分类名</string>
    <string name="history">历史记录</string>
    <string name="product_title">莎拉公主  奥地利水晶项链天使泪水晶项链</string>
    <string name="product_specification">6种规格可选</string>
    <string name="product_delete">删除</string>
    
     <!-- supplier -->
    <string name="supplier_intro">欢迎使用叮当兔，可以与您的供应商实现订单电子化的处理。请先填写供应商的手机号。</string>
    <string name="supplier_name">供应商名称</string>
    <string name="supplier_email">EMAIL</string>
    <string name="add_guestor">添加客户</string>
    <string name="business_range">经营范围</string>
    <string name="business_category">经营类别</string>
    <string name="supplier_address">地址</string>
    <string name="supplier_shop">供应商店铺</string>
    <string name="supplier_shop_details">店铺详情</string>
    <string name="supplier_materiel_purchase">物料采购项目</string>
    <string name="supplier_select_materiel">选择关联物料</string>
    <string name="supplier_trade_info">交易信息</string>
    <string name="supplier_pay_info">付款信息</string>
    <string name="supplier_open_bank">开户银行</string>
    <string name="supplier_bank_account">银行账号</string>
    <string name="supplier_pay_type">付款方式</string>
    <string name="supplier_delivery_type">配送方式</string>
    <string name="supplier_address2">供应商地址</string>
    <string name="supplier_sort">供应商分组</string>
    <string name="supplier_cancle_connection">取消关联</string>
    <string name="supplier_connection">关联供应商</string>
    <string name="supplier_message_title">消息标题</string>
    <string name="supplier_message_content">消息内容消息内容消息内容消息内容消息内容消息内容</string>
    <string name="supplier_request_mess">请求通知消息</string>
    <string name="supplier_sys_recomm">系统推荐供应商</string>
    <string name="supplier_num">32个供应商</string>
    <string name="supplier_list">供应商列表</string>
    <string name="supplier_in_trade">交易中的供应商</string>
    <string name="supplier_unresponse">未响应连接的供应商</string>
    <string name="supplier_unconnection">已断开连接的供应商</string>
    <string name="supplier_receive_request">收到的连接请求</string>
    <string name="supplier_refuse_rquest">被拒绝的连接请求</string>
    <string name="supplier_guest_sort">客户分组</string>
    
       <!-- order -->
    <string name="order_tobe_approve">待审核</string>
    <string name="order_tobe_confirm">待确认</string>
    <string name="order_tobe_release">待发货</string>
    <string name="order_tobe_takeover">待收货</string>
    <string name="order_tobe_payoff">待付款</string>
    <string name="order_tobe_complete">已完成</string>
    <string name="all_stalls">所有档口</string>
    <string name="stalls1">档口1</string>
    <string name="unconnect_supplier">未关联供应商</string>
    <string name="connected_supplier">已关联供应商</string>
    <string name="order_supplier1">订单/供应商1</string>
    <string name="order_supplier2">订单/供应商2</string>
    <string name="order_supplier3">订单/供应商3</string>

    
    
    
    
     <!--ToOrder -->
    <string name="cancle_data_synchro">取消数据同步</string>
    <string name="wait_in_updata">等待更新中....</string>
    <string name="history_order_updata">89个历史订单未同步</string>
    <string name="version_code">5.4.6</string>
    <string name="software_updata">软件升级</string>
    <string name="contact_help">联系帮助</string>
     
    
           <!--登录注册 -->
    <string name="comp_mobile2">联系方式</string>
    <string name="comp_address">公司地址</string>
    <string name="comp_address2">请输入公司地址</string>
    <string name="comp_name2">请输入公司名称</string>
    <string name="complete_register">完成注册</string>
    <string name="password">密码</string>
    <string name="comp">公司</string>
    <string name="email">邮箱</string>
    <string name="input_mobile">请输入手机号</string>
    <string name="input_name">请输入姓名</string>
    <string name="input_email">请输入邮箱</string>
    <string name="text">已注册过叮当兔账号，立即登录...</string>
    <string name="login">登录</string>
    <string name="logining">登录中......</string>
    <string name="new_user">新用户？</string>
    <string name="forget_pass">忘记密码？</string>
    <string name="create_account">创建账号</string>
    <string name="reset_pass">重置密码</string>
    
    
   <!-- more -->
    <string name="user_seting">个人设置</string>
    <string name="change_pass">修改密码</string>
    <string name="manage_address">配送地址管理</string>
    <string name="permission_setting">权限设置</string>
    <string name="push_message">消息推送</string>
    <string name="login_out">退出登录</string>
    
       <!-- 个人设置 -->
    <string name="comp_log">公司LOGO</string>
    <string name="comp_message">详细信息</string>
    <string name="comp_name">公司名称</string>
    <string name="comp_contacts">联系人</string>
    <string name="mobile">15055566778</string>
    <string name="comp_mobile">移动电话</string>
    <string name="comp_tel">固定电话</string>
           <!-- 修改密码 -->
    <string name="pass">密码</string>
    <string name="old_pass">旧密码</string>
    <string name="new_pass">新密码</string>
    <string name="confirm_pass">确认密码</string>
    <string name="ed_old_pass">********</string>
    <string name="ed_pass">6-20位数字或字母</string>
    <string name="repeat_pass">再输入一次上述密码</string>
     <!-- 地址管理 -->
    <string name="new_address">添加新地址</string>
    <string name="comp_contacts2">联系人:</string>
    <string name="new_new">新建</string>
    <string name="new_username">姓名</string>
    <string name="item_address">**省**市**区**街道**小区</string>
    <string name="new_mobile">联系电话</string>
    <string name="new_city">省市区</string>
    <string name="new_street">街道</string>
    <string name="default_address">设为默认地址</string>
     <!-- 权限管理 -->
    <string name="admin">管理员</string>
    <string name="admin_name">总管理员姓名</string>
    <string name="cooker">厨师</string>
    <string name="cooker_name">厨师姓名</string>
    <string name="buyer">采购</string>
    <string name="buyer_name">采购员姓名</string>
     <!-- 邀请用户 -->
    <string name="default_comp">设置默认的公司或分支机构</string>
    <string name="charactor">角色选择</string>
    <string name="pause">暂停使用</string>
    <string name="working">正常使用</string>
    <string name="delete">删除</string>
    <string name="code">验证码</string>
    <string name="code_btn">获取验证码</string>
    <string name="invite_mobile">手机号</string>
    <string name="invitor_mobile">请输入邀请的手机号</string>
   
     <!-- 消息-->
    <string name="message_title">消息标题</string>
    <string name="message_date">2015-09-10  19:00</string>
    <string name="message_content">消息内容消息内容消息内容消息内容消息内容消息内容消息内容消息内容消息内容消息内容消息内容消息内容消息内容消息内容消息内容消息内容</string>
    
<!-- 其他 -->

<string name="load_data">正在加载,请稍候&#8230;</string>    
</resources>
