<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.zykj.toorder.view.MyCommonTitle
        android:id="@+id/aci_mytitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/tab_order"
        android:layout_width="match_parent"
        android:layout_height="@dimen/thirty"
        android:layout_marginTop="@dimen/five"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/order_tab1"
            style="@style/my_radiobutton"
            android:checked="true"
            android:text="@string/order_tobe_approve" />

        <RadioButton
            android:id="@+id/order_tab2"
            style="@style/my_radiobutton"
            android:text="@string/order_tobe_confirm" />

        <RadioButton
            android:id="@+id/order_tab3"
            style="@style/my_radiobutton"
            android:text="@string/order_tobe_release" />

        <RadioButton
            android:id="@+id/order_tab4"
            style="@style/my_radiobutton"
            android:text="@string/order_tobe_takeover" />

        <RadioButton
            android:id="@+id/order_tab5"
            style="@style/my_radiobutton"
            android:text="@string/order_tobe_complete" />
    </RadioGroup>

    <FrameLayout
        android:id="@+id/order_framelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </FrameLayout>

</LinearLayout>