<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.zykj.toorder.view.MyMainCommonTitle
        android:id="@+id/aci_mymaintitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/cancle_data_synchro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_null_white"
                android:text="@string/cancle_data_synchro"
                android:textColor="@color/btn_orange" />

            <ProgressBar
                android:id="@+id/progressBar1"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginLeft="@dimen/twenty"
                android:layout_marginTop="@dimen/twenty"
                android:layout_marginRight="@dimen/twenty"
                android:background="@drawable/bg_null_white" />

            <Button
                android:id="@+id/wait_in_updata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty"
                android:background="@drawable/bg_null_white"
                android:text="@string/wait_in_updata" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_toorder_pic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/toorder_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/mobile" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/toorder_history_order"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/forty"
                    android:layout_weight="1"
                    android:text="@string/history_order_updata"
                    android:textColor="@color/btn_orange" />

                <ImageView
                    android:layout_width="@dimen/twenty"
                    android:layout_height="@dimen/twenty"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/twenty"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_warning" />
            </LinearLayout>

            <TextView
                android:id="@+id/toorder_version_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty"
                android:gravity="center"
                android:text="@string/version_code" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/settingdivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty"
            android:background="@drawable/tab_bg_top"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/software_updata"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/tab_bg_top"
                android:text="@string/software_updata"
                android:textColor="@color/btn_orange" />

            <Button
                android:id="@+id/contact_help"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/tab_bg_top"
                android:text="@string/contact_help"
                android:textColor="@color/btn_orange" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>