<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/product_shopcart_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/five"
                android:layout_marginLeft="@dimen/ten"
                android:layout_marginTop="@dimen/five"
                android:src="@drawable/comp_logo" 
                android:contentDescription="@string/app_name"/>

            <TextView
                android:id="@+id/product_shopcart_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/product_shopcart_img"
                android:layout_marginLeft="@dimen/five"
                android:layout_toRightOf="@id/product_shopcart_img"
                android:text="@string/product_title" />

            <TextView
                android:id="@+id/product_shopcart_specification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/product_shopcart_img"
                android:layout_below="@id/product_shopcart_title"
                android:layout_marginLeft="@dimen/five"
                android:layout_toRightOf="@id/product_shopcart_img"
                android:gravity="bottom"
                android:text="@string/product_specification"
                android:textColor="@color/grey"
                android:textSize="@dimen/twelve" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/one"
            android:background="@color/lgrey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ten"
                android:src="@drawable/product_delete_icon" 
                android:contentDescription="@string/app_name"/>

            <TextView
                android:id="@+id/product_shopcart_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/five"
                android:text="@string/product_delete" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/product_shopcart_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/five"
                android:text="@string/product_unit2"
                android:textColor="@color/grey" />

            <EditText
                android:id="@+id/product_shopcart_count"
                android:layout_width="@dimen/sixty"
                android:layout_height="@dimen/twenty"
                android:layout_marginRight="@dimen/fifteen"
                android:gravity="right|center_vertical"
                android:inputType="number" >
            </EditText>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/one"
            android:background="@color/lgrey" />
    </LinearLayout>

</LinearLayout>